route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capsule-route
spec:
  parentRefs:
    - name: ashu-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /Recruitment
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: capsule-service
          namespace: gateway-ns
          port: 80
